--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-# Dependencies
-node_modules/
-
-# Environment variables
-# CRITICAL: Never commit .env files to version control to avoid leaking secrets
-.env
-.env.*
-
-# Build outputs
+# Frontend artifacts
 dist/
 build/
+.vite/
+
+# Backend artifacts
+backend/dist/
+backend/node_modules/
+backend/build/
+
+# Shared
+node_modules/
+.env
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+.DS_Store
+.idea/
+.vscode/
+*.swp
