--- a/package.json
+++ b/package.json
@@ -1,30 +1,47 @@
 {
+  "name": "invoice-saas-frontend",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "description": "Invoice SaaS Frontend - React + Vite + Hostinger",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "npx tsx watch src/app.ts"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "@types/handlebars": "^4.0.40",
-    "@types/nodemailer": "^7.0.9",
-    "bcryptjs": "^3.0.3",
-    "dotenv": "^17.2.3",
-    "handlebars": "^4.7.8",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3",
-    "nodemailer": "^7.0.13",
-    "puppeteer": "^24.36.1",
-    "stripe": "^20.3.0",
+    "@hookform/resolvers": "^5.2.2",
+    "axios": "^1.13.4",
+    "lucide-react": "^0.563.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/helmet": "^0.0.48",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.2.0",
-    "prisma": "^5.22.0"
+    "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "terser": "^5.31.1",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
