--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Invoice SaaS Frontend - React + Vite + Hostinger",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npx tsc -b && npx vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite preview"
